--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,9 @@
 version: '3'
 
 services:
-  mysql:
-    image: mysql:5.7
-    container_name: mysql
-    restart: always
-    platform: linux/amd64
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: goexpert
-      MYSQL_PASSWORD: root
-    ports:
-      - 3306:3306
+  sqlite3:
+    image: nouchka/sqlite3:latest
+    stdin_open: true
+    tty: true
+    volumes:
+      - ./db/:/root/db/
